fixed background image on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ body {
   background-image: url("./images/nordwood-themes.jpg");
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
-  background-attachment: fixed; /* fix the backgound image on sreeen resizing */
+  background-attachment: fixed;
 }
 
 /* Header style */
@@ -172,5 +172,8 @@ body {
   }
   .main-footer {
     font-size: 0.85rem;
+  }
+  body {
+    background-attachment: initial;
   }
 }
